# svg.shapes

./: .coverage  CHANGES.txt  LICENSE.txt  Makefile  README.rst  pyproject.toml
src/svg/: __init__.py
src/svg/shapes/: __init__.py  base.py  shapes.py
tests/: __init__.py  conftest.py  test_base.py  test_circle.py  test_complex_shapes.py  test_ellipse.py  test_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_polygon.py  test_polyline.py  test_rectangle.py  test_shapes.py
